@@ -1,3 +1,9 @@
+Sat Apr 30 16:15:13 2005  Nick Burrett  <nick@sqrt.co.uk>
+
+	* unix/features.c (__get_program_name): For ELF, dereference weak
+	symbol to verify whether it exists.
+	* sys/mman.c (mmap): Likewise.
+
 Sat Apr 30 14:55:04 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	Ease the conversion from AOF to ELF.
